k8s/echo-server-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: echo-server-deployment
  annotations:
    kubernetes.io/change-cause: "v2"
spec:
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    #matchLabels:
    #  app-name: echo-server
    matchExpressions:
      - key: app-name
        values:
          - echo-server
          - echo-service
        operator: In
  template:
    metadata:
      labels:
        app-name: echo-server
    spec:
      containers:
        - name: echo-server
          image: landrzejewski/echo-server:v2
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 64M
            limits:
              memory: 128M
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 5
            periodSeconds: 2
            failureThreshold: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 3
