k8s/sqrt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: sqrt-deployment
  annotations:
    kubernetes.io/change-cause: "Initial release"
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: sqrt
  template:
    metadata:
      labels:
        app-name: sqrt
    spec:
      containers:
        - name: sqrt
          image: registry.k8s.io/hpa-example
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 220m
            limits:
              cpu: 500m
