k8s/updater-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: updater-pod
spec:
  containers:
    - name: updater
      #     image: landrzejewski/updater:v1
      #     args:
      #       - '20'
      image: landrzejewski/updater:v2
      #     env:
      #       - name: INTERVAL
      #         value: '20'

      #         valueFrom:
      #           configMapKeyRef:
      #             key: INTERVAL
      #             name: updater-config-map

      volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /var/htdocs
          name: storage
    - name: nginx
      image: nginx:1.26.0-alpine
      ports:
        - containerPort: 80
          name: http
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: storage
  volumes:
    - name: config
      configMap:
        name: updater-config-map
    - name: storage
      persistentVolumeClaim:
        claimName: storage-claim
#     hostPath:
#       path: /tmp
