k8s/echo-server-service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: echo-server-service
spec:
  selector:
    app-name: echo-server
  #type: ClusterIP #default
  #clusterIP: 17.191.33.44
  ports:
    - port: 80
      targetPort: 8080
