k8s/sqrt-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: sqrt-service
spec:
  selector:
    app-name: sqrt
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
